# ecosystem-packages

./: .gitignore  .pre-commit-config.yaml  README.md  ecosystem.json  hatch.toml  packages.yml  schema.json  template-repos.yml
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: add-package.md
.github/workflows/: make-json.yml  register-template-repos.yml
affiliated/: scverse_affiliated_package_review_guidelines.md
docs/: reviewer_guide.md
scripts/: README.md  pyproject.toml
scripts/ecosystem_scripts/: __init__.py  template_repo_registry.py
scripts/src/ecosystem_scripts/: _logging.py  schema.json  template_repo_registry.py  validate_registry.py
